packages/language/src/grammar/test/corpus/basic.txt
==================
Empty document
==================

---

(document)

==================
Simple task
==================

task example {
  description = "test"
}

---

(document
  (resource
    (resource_header
      type: (resource_type)
      id: (identifier
        (bare_identifier)))
    body: (block
      (block_open)
      (attribute
        key: (bare_identifier)
        value: (expression
          (tuple
            (literal
              (string_literal
                (str_open)
                (str_body)
                (str_close))))))
      (block_close))))

==================
Status modifiers
==================

task bar complete draft arbitrary-stuff "quoted" {
  description = "done"
}

---

(document
  (resource
    (resource_header
      type: (resource_type)
      id: (identifier
        (bare_identifier))
      status_modifier: (resource_modifier
        (identifier
          (bare_identifier)))
      status_modifier: (resource_modifier
        (identifier
          (bare_identifier)))
      status_modifier: (resource_modifier
        (identifier
          (bare_identifier)))
      status_modifier: (resource_modifier
        (identifier
          (string_literal
            (str_open)
            (str_body)
            (str_close)))))
    body: (block
      (block_open)
      (attribute
        key: (bare_identifier)
        value: (expression
          (tuple
            (literal
              (string_literal
                (str_open)
                (str_body)
                (str_close))))))
      (block_close))))

==================
Quoted identifier
==================

task "example 2" {
}

---

(document
  (resource
    (resource_header
      type: (resource_type)
      id: (identifier
        (string_literal
          (str_open)
          (str_body)
          (str_close))))
    body: (block
      (block_open)
      (block_close))))

==================
Multiple attributes
==================

task example {
  title = "Test"
  count = 42
  enabled = true
  disabled = false
}

---

(document
  (resource
    (resource_header
      type: (resource_type)
      id: (identifier
        (bare_identifier)))
    body: (block
      (block_open)
      (attribute
        key: (bare_identifier)
        value: (expression
          (tuple
            (literal
              (string_literal
                (str_open)
                (str_body)
                (str_close))))))
      (attribute
        key: (bare_identifier)
        value: (expression
          (tuple
            (literal
              (number_literal)))))
      (attribute
        key: (bare_identifier)
        value: (expression
          (tuple
            (literal
              (boolean_literal)))))
      (attribute
        key: (bare_identifier)
        value: (expression
          (tuple
            (literal
              (boolean_literal)))))
      (block_close))))

==================
Reference dependency
==================

task A {
}

task B {
  depends_on = A
}

---

(document
  (resource
    (resource_header
      type: (resource_type)
      id: (identifier
        (bare_identifier)))
    body: (block
      (block_open)
      (block_close)))
  (resource
    (resource_header
      type: (resource_type)
      id: (identifier
        (bare_identifier)))
    body: (block
      (block_open)
      (attribute
        key: (bare_identifier)
        value: (expression
          (tuple
            (bare_identifier))))
      (block_close))))

==================
Explicit tuple
==================

task C {
  depends_on = [A, B]
}

---

(document
  (resource
    (resource_header
      type: (resource_type)
      id: (identifier
        (bare_identifier)))
    body: (block
      (block_open)
      (attribute
        key: (bare_identifier)
        value: (expression
          (tuple
            (bare_identifier)
            (bare_identifier))))
      (block_close))))

==================
Comments
==================

# Hash comment
// Slash comment

task example {
  # Inline comment
  value = "test"
}

---

(document
  (comment)
  (comment)
  (resource
    (resource_header
      type: (resource_type)
      id: (identifier
        (bare_identifier)))
    body: (block
      (block_open)
      (comment)
      (attribute
        key: (bare_identifier)
        value: (expression
          (tuple
            (literal
              (string_literal
                (str_open)
                (str_body)
                (str_close))))))
      (block_close))))
